import net.darkhax.curseforgegradle.TaskPublishCurseForge
//2025 copyright some gradle setting from Create : https://github.com/Creators-of-Create/Create


plugins {

    id 'net.neoforged.moddev' version '2.0.107'
    id 'java-library'
    id 'maven-publish'
    id 'net.darkhax.curseforgegradle' version '[1.1.24,)'
    id "dev.ithundxr.silk" version "0.11.15"
    id "me.modmuss50.mod-publish-plugin" version "1.0.0"
    id "idea"

}


apply from: "./gradle/java.gradle"
apply from: "gradle/property_loader.gradle"

ext.mod_version = "${mod_release_version}-${mod_create_compat_version}"


group = mod_group_id
version = mod_version
archivesBaseName = mod_id
String gitHash = "${calculateGitHash() + (hasUnstaged() ? "-modified" : "")}"

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

//apply plugin: 'org.spongepowered.mixin'


base {
    archivesName = mod_id
}

repositories {
    mavenLocal()
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

neoForge {
    version = project.neo_version   // 在 gradle.properties 中定义

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG

            // 如果您使用了 Mixin，请添加以下参数（配置文件名与清单中的一致）
            programArgument '-mixin.config=createlazytick.mixins.json'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

tasks.withType(Copy).configureEach {
    // 确保这里的配置是正确的
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    maven { url = "https://maven.neoforged.net/releases" }
    maven { url = "https://maven.createmod.net" }          // Create, Ponder, Flywheel
    maven { url = "https://mvn.devos.one/snapshots" }      // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"               // JEI
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you

    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html#sub:flat_dir_resolver
    flatDir {
        dir 'libs'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:22.0.0'
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor' //Mixin注解处理器(记得开)
    //Create
    implementation("curse.maven:create-328085:7408951")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))

    //implementation 'com.google.code.gson:gson:2.8.9' // 更新版本
    //modImplementation(jarJar( group: 'com.moandjiezana.toml', name: 'toml4j', version: '0.7.2'))
    // Specify the version of Minecraft to use.
    // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
    // The "userdev" classifier will be requested and setup by ForgeGradle.
    // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
    // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
    //minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"



    implementation("curse.maven:observable-509575:6697124")

    implementation("curse.maven:spark-361579:6225208")


    implementation("curse.maven:kubejs-238086:7278501")
    implementation("curse.maven:rhino-416294:7104526")

    implementation("curse.maven:architectury-api-419699:5786327")
    implementation("curse.maven:kotlin-for-forge-351264:6994056")
    implementation("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")

    implementation("curse.maven:create-enchantment-industry-688768:7656384")
    //modImplementation("curse.maven:lionfish-api-1001614:5922047")
    //modImplementation("curse.maven:lendercataclysm-551586:6906993")
    //create
    //runtimeOnly fg.deobf("curse.maven:create-328085:5838779")

    //JEI
    compileOnly("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${jei_minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${jei_minecraft_version}-neoforge:${jei_version}")


    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

    //  if (System.getProperty('idea.sync.active') != 'true') {
//        annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
    //}
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

compileJava {
    options.compilerArgs = ['-Xdiags:verbose']
}

jar {
    archiveFileName = "${mod_id}-${mod_version}-neoforge-${minecraft_version}.jar"
    from('LICENSE.txt') {
        rename { "${it}_${archivesBaseName}" }

    }
    manifest.attributes([
            "MixinConfigs": "createlazytick.mixins.json",
            "Git-Hash"    :  gitHash
    ])

}

tasks.register('PublishInfo') {
    doLast {
        println "Reobfuscated JAR file path: ${reobfJar.archiveFile.get().asFile.absolutePath}"
        println "version = \"$minecraft_version-$mod_version\"\n" +
                "    displayName = \"${display_name}_v${mod_release_version}_for_Create_v${mod_create_compat_version}\""
        def propertiesFile = file('api.properties')
        if (propertiesFile.exists()) {
            def properties = new Properties()
            properties.load(new FileInputStream(propertiesFile))
            def cfToken = properties.getProperty("CF_TOKEN")
            def modrinthToken = properties.getProperty("MODRINTH_TOKEN")

            println "CF_TOKEN: $cfToken"
            println "MODRINTH_TOKEN: $modrinthToken"
        } else {
            println "api.properties not exist"
        }
    }
    group = 'Publishing'
}

tasks.register('publishAll') {
    dependsOn 'publishCurseForge'
    dependsOn 'publishMods'
    group = 'Publishing'
}









/*tasks.register('publishCurseForge', TaskPublishCurseForge) {
    dependsOn jar
    def propertiesFile = file('api.properties')
    def properties = new Properties()
    properties.load(new FileInputStream(propertiesFile))

    var cfToken = properties.getProperty("CF_TOKEN")
    apiToken = cfToken

    def mainFile = upload(curseforge_id, new File(
            "./build/libs/${package_name}-${mod_version}-neoforge-${minecraft_version}.jar"))
    mainFile.changelog = new File("./update/changelog.md").text.split("\n\n\n")[0]
    mainFile.addEnvironment("Client", "Server")
    mainFile.addGameVersion("${minecraft_version}")
    mainFile.addModLoader("Forge","NeoForge")
    mainFile.addRequirement("create")


    mainFile.displayName = "${display_name}_v${mod_release_version}_for_Create_v${mod_create_compat_version}"

    mainFile.addOptional(
            "jei",
            "observable")
    mainFile.releaseType = publish_version //beta release. is alpha.
    disableVersionDetection()
}*/



/*publishMods {
    def propertiesFile = file('api.properties')
    def properties = new Properties()
    properties.load(new FileInputStream(propertiesFile))
    def modrinthTokenGet = properties.getProperty("MODRINTH_TOKEN")

//    file = reobfJar.archiveFile
    changelog = rootProject.file("./update/changelog.md").text
    type = STABLE
    version = "$minecraft_version-$mod_version"
    displayName = "${display_name}_v${mod_release_version}_for_Create_v${mod_create_compat_version}"

    modLoaders.add("forge")
    modLoaders.add("neoforge")

    var mrToken = modrinthTokenGet
    if(mrToken != null) {
        modrinth {
            accessToken = mrToken
            projectId = "${modrinth_id}"
            minecraftVersions.add(minecraft_version)
            requires("create")
            optional("jei","observable")
        }
    }
}*/

String calculateGitHash() {
    try {
        def output = providers.exec {
            commandLine("git", "rev-parse", "HEAD")
        }
        return output.standardOutput.asText.get().trim()
    } catch (Throwable ignored) {
        return "unknown"
    }
}

boolean hasUnstaged() {
    try {
        def output = providers.exec {
            commandLine("git", "status", "--porcelain")
        }
        String result = output.standardOutput.asText.get().replace("/M gradlew(\\.bat)?/", "").trim()
        if (!result.isEmpty())
            println("Found stageable results:\n ${result}\n")
        return !result.isEmpty()
    } catch (Throwable ignored) {
        return false
    }
}

allprojects {
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['-encoding', 'utf8']
    }

    tasks.withType(Test) {
        systemProperty "file.encoding", "UTF-8"
    }

    tasks.withType(Javadoc) {
        options.encoding = 'UTF-8'
    }
}
